--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
   padding: 0px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  max-height: 655px;
+  max-height: 610px;
 }
 
 body {
@@ -11,15 +11,12 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .container {
   width: 100%;
-  height: 100%;
-  position: relative;
+  height: auto;
+  position: fixed;
   background-image: url(./green-shoe.png);
   background-repeat: no-repeat;
   -webkit-box-shadow: 10px 5px 5px black;
@@ -126,8 +123,8 @@ button {
   -webkit-transition: 1.3s ease-in-out;
   transition: 1.3s ease-in-out;
   letter-spacing: 2px;
-  -webkit-animation: bass 4s linear forwards;
-          animation: bass 4s linear forwards;
+  -webkit-animation: rotateButton 4s linear forwards;
+          animation: rotateButton 4s linear forwards;
   -webkit-animation-iteration-count: 1;
           animation-iteration-count: 1;
 }
@@ -136,7 +133,7 @@ button:hover {
   background: #df580a;
 }
 
-@-webkit-keyframes bass {
+@-webkit-keyframes rotateButton {
   20% {
     -webkit-transform: rotate(-5deg);
             transform: rotate(-5deg);
@@ -159,7 +156,7 @@ button:hover {
   }
 }
 
-@keyframes bass {
+@keyframes rotateButton {
   20% {
     -webkit-transform: rotate(-5deg);
             transform: rotate(-5deg);
@@ -179,30 +176,6 @@ button:hover {
   35% {
     -webkit-transform: rotate(0);
             transform: rotate(0);
-  }
-}
-
-@media (min-width: 400px) {
-  .div2 {
-    border-right: 700px solid transparent;
-  }
-}
-
-@media (min-width: 767px) {
-  .div2 {
-    border-right: 1100px solid transparent;
-  }
-}
-
-@media (min-width: 992px) {
-  .div2 {
-    border-right: 1100px solid transparent;
-  }
-}
-
-@media (min-width: 1270px) {
-  .div2 {
-    border-right: 1100px solid transparent;
   }
 }
 
@@ -210,7 +183,7 @@ button:hover {
   background-color: green;
 }
 
-@media (min-width: 400px) {
+@media (min-width: 300px) {
   .container {
     background-position-x: 5vh;
     background-position-y: 61vh;
@@ -234,23 +207,28 @@ button:hover {
   }
 }
 
-@media (min-width: 1270px) {
+@media (min-width: 1200px) {
   .container {
-    background-color: green;
     background-size: auto;
     background-position-x: 95vh;
     background-position-y: 33vh;
   }
 }
 
-@media (min-width: 400px) {
+.div2 {
+  border-top: 530px solid #ffcc00;
+  border-bottom: 100px solid transparent;
+  border-right: 1100px solid transparent;
+}
+
+@media (min-width: 300px) {
   button {
     padding: 20px;
     left: 39%;
   }
 }
 
-@media (min-width: 400px) {
+@media (min-width: 300px) {
   .clock {
     margin-left: 90px;
   }
@@ -294,7 +272,7 @@ button:hover {
   }
 }
 
-@media (min-width: 1270px) {
+@media (min-width: 1200px) {
   .clock__item {
     margin-left: 0;
     height: 105px;
@@ -308,19 +286,6 @@ button:hover {
     font-size: 70px;
     -webkit-box-shadow: 10px 10px 60px lime, -5px -5px 30px green;
             box-shadow: 10px 10px 60px lime, -5px -5px 30px green;
-  }
-}
-
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
-  __item {
-    margin-left: 0;
-    height: 105px;
-    margin: 0 0.5rem;
-    padding: 1rem;
-    border-radius: 10px;
-    margin-top: 13px;
-    font-family: Helvetica, sans-serif;
-    font-size: 40px;
   }
 }
 /*# sourceMappingURL=main.css.map */
